flux/apps/skyline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skyline

spec:
  selector:
    matchLabels:
      app: skyline

  template:
    metadata:
      labels:
        app: skyline

    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database

      containers:
        - name: skyline
          image: ghcr.io/nint8835/skyline
          args: [ "start" ]

          volumeMounts:
            - mountPath: /data
              name: database

          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http

          resources:
            requests:
              memory: "512Mi"
            limits:
              memory: "512Mi"
