flux/apps/skyline/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: skyline

spec:
  selector:
    app: skyline

  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
