flux/apps/skyline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skyline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: traefik-https-redirect@kubernetescrd

spec:
  tls:
    - hosts:
        - skyline.bootleg.technology
      secretName: skyline-bootleg-technology
  rules:
    - host: skyline.bootleg.technology
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skyline
                port:
                  name: http
